<resources>
    <string name="app_name">Rastreador App</string>

    <!-- LoginActivity -->
    <string name="msg_signin_success">signInResult:success -> %1$s.</string>
    <string name="msg_signin_fail">signInResult:failed code= %1$s.</string>
    <string name="msg_signin_fail_snack_bar">Não foi possível efetuar login.</string>

    <!-- MainActivity -->
    <string name="toolbar_title_main">Rastrear Objeto</string>
    <string name="msg_enter_code">Informe um código!</string>
    <string name="msg_enter_valid_code">Informe um código válido!</string>
    <string name="msg_search_error">Ocorreu um problema ao buscar as informações</string>
    <string name="msg_search_error_not_found">Objeto não localizado na base dos correios</string>
    <string name="msg_search_fail">Falha ao buscar informações</string>
    <string name="msg_search_sucess">Informações recuperadas com sucesso</string>
    <string name="select_track_object">----- Objetos -----</string>
    <string name="et_select_or_input_code">Selecione ou insira um código</string>
    <string name="btn_track">RASTREAR</string>
    <string name="msg_logout_success">Logout with success</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="dialog_message_logout">Deseja realmente efetuar o logout?</string>
    <string name="dialog_about_app_title">Sobre o app</string>
    <string name="dialog_about_app_message">Aplicativo para rastreio de objetos dos Correios.\n\n Desenvolvido por Antoni Sganzerla.</string>
    <string name="app_store_details">Confira o aplicativo Rastreador App \n </string>
    <string name="app_store_url">https://play.google.com/store/apps/details?id=com.sgztech.rastreamento</string>
    <string name="msg_store_app_not_found">Não foi possível abrir a loja de aplicativos.</string>

    <!-- track_object_list_item -->
    <string name="et_example">Exemplo</string>

    <!-- event_card_view -->
    <string name="tv_event">Evento</string>
    <string name="tv_observation">Observação:</string>
    <string name="tv_date">Data:</string>
    <string name="tv_locale">Local:</string>
    <string name="tv_destiny">Destino:</string>
    <string name="tv_city">Cidade:</string>
    <string name="tv_uf">UF:</string>
    <string name="tv_type">Tipo:</string>
    <string name="tv_status">Status:</string>

    <!-- postal_object_card_view -->
    <string name="tv_category">Categoria:</string>
    <string name="tv_name">Nome:</string>
    <string name="tv_initials">Sigla:</string>

    <!-- TrackObjectListActivity -->
    <string name="toolbar_title_object_track">Objetos cadastrados</string>
    <string name="tv_example_code">LB083028640SG</string>
    <string name="msg_track_object_saved">Objeto criado com sucesso</string>
    <string name="check_list_empty">Você não possui objetos cadastrados</string>

    <!-- TrackObjectAdapter -->
    <string name="msg_delete_track_object">Deseja excluir o objeto?</string>
    <string name="msg_track_object_deleted">Objeto excluído com sucesso</string>

    <!-- dialog_add_track_object -->
    <string name="dialog_save">Salvar</string>
    <string name="dialog_title">Atenção</string>
    <string name="dialog_positive_button">Sim</string>
    <string name="dialog_negative_button">Cancelar</string>
    <string name="dialog_add_object_title">Criar objeto</string>
    <string name="dialog_et_track_object_name">Nome objeto</string>
    <string name="dialog_et_track_object_code">Código objeto</string>
    <string name="dialog_et_error">Preencha o campo</string>

    <!-- Menu item drawer -->
    <string name="menu_item_title">Ajuda</string>
    <string name="menu_item_about">Sobre o app</string>
    <string name="menu_item_rate">Avaliar</string>
    <string name="menu_item_share">Compartilhar</string>
    <string name="menu_item_logout">Sair</string>
    <string name="menu_title_mainly">Menu</string>

</resources>
