<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/menu_title_mainly">
        <menu>
            <item
                android:id="@+id/nav_item_logout"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/menu_item_logout" />
        </menu>
    </item>
    <item android:title="@string/menu_item_title">
        <menu>
            <item android:id="@+id/nav_item_rate"
                android:icon="@android:drawable/ic_menu_compass"
                android:title="@string/menu_item_rate"/>

            <item android:id="@+id/nav_item_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/menu_item_share"/>

            <item android:id="@+id/nav_item_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/menu_item_about"/>
        </menu>
    </item>
</menu>